--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     background-color: white;
     display: flex;
     justify-content: space-between;
-    padding: 0em 6em;
+    padding: 1.6em 5em 0em 5em;
     font-size: 1em;
     color: #1c1c1c;
     align-items: center;
@@ -52,6 +52,8 @@ nav ul {
     padding: 0.65em 1.15em 0.8em 1.1em;
     cursor: pointer;
     margin: 0em 0.2em;
+    letter-spacing: 0.01em;
+    text-decoration: none;
 }
 
 .nav-btn:hover {
@@ -67,10 +69,10 @@ nav ul {
     border-radius: 0.3em;
     border: .1em solid #2d6bef;
     text-align: center;
-    padding: 0.55em 1.05em 0.7em 1em;
+    padding: 0.6em 1.05em 0.7em 1em;
 }
 
-#contact-nav-btn:hover {
+#contact-nav-btn:hover:visited {
     background-color: #2d6bef;
     color: white;
 }
@@ -84,7 +86,7 @@ nav ul {
 .main-container{
     display: flex;
     justify-content: space-between;
-    padding: 6em 9em 12em 8em;
+    padding: 5em 0em 12em 5em;
 }
 
 .main-container img {
@@ -230,7 +232,7 @@ nav ul {
     display: flex;
     flex-direction: space-between;
     align-items: center;
-    padding: 4.5em 6em 5.5em 6em;
+    padding: 5em 5em 5.5em 5em;
 }
 
 .about-container img{
@@ -242,12 +244,12 @@ nav ul {
 .projects-container {
     display: flex;
     justify-content: space-between;
-    margin: 8em 8em 14em 5em;
+    margin: 8em 5em 14em 5em;
 }
 
 .project-article {
     background-color: white;
-    width: 17%;
+    width: 16%;
     height: 340px;
     padding: 2.1em 2.1em;
     box-shadow: #dfdfdf 0px 10px 22px;
@@ -259,11 +261,10 @@ nav ul {
 .project-title {
     color: #1c1c1c;
     font-family: GraphikMedium;
-    margin-bottom: 0.6em;
     font-size: 1.4rem;
     cursor: pointer;
     padding: 0px;
-    margin: 0.4em 0.5em
+    margin: 0.5em 0.5em
 }
 
 .project-title:hover{
@@ -279,7 +280,7 @@ nav ul {
     letter-spacing: 0.07px;
     line-height: 1.6rem;
     text-align: center;
-    padding-bottom: 1.6rem;
+    padding-bottom: 1.8rem;
 }
 
 .project-illustration {
@@ -301,7 +302,7 @@ nav ul {
     height: 300px;
     display: flex;
     justify-content: space-between;
-    padding: 6em 8em 6em 5em;
+    padding: 6em 5em 6em 5em;
 }
 
 .contact-form {
@@ -373,9 +374,10 @@ nav ul {
     width: 10%;
 }
 
-.bracket-logo-footer {
-    padding-top: 0.2em;
+#bracket-logo-footer {
+    padding-top: 0.16em;
     cursor: pointer;
+    color: white;
 }
 
 .footer-links {
@@ -390,4 +392,67 @@ nav ul {
     color: #2d6bef
 }
 
+.modal {
+    background-color: red;
+    position: fixed;
+    width: 600px;
+    height: 400px;
+    border-radius: 0.6em;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
+    font-size: 100%;
+  }
+  
+  .line {
+    position: relative;
+    top: 8%;
+    width: 31.2em;
+    overflow: hidden;
+    transform: translateY(-50%);
+  }
+  
+  .modal-hi {
+    animation: typewriter 4s steps(14) 1s 1 normal both,
+      blinkTextCursor 500ms steps(14) infinite normal;
+  }
+  
+  @keyframes typewriter {
+    from {
+      width: 0;
+    }
+    to {
+      width: 31.2em;
+    }
+  }
+  
+  @keyframes blinkTextCursor {
+    from {
+      border-right-color: red;
+    }
+    to {
+      border-right-color: transparent;
+    }
+  }
+  
+  .typed-out {
+    overflow: hidden;
+    white-space: nowrap;
+    animation: typing 2s forwards;
+    font-size: 1.6rem;
+    width: 0;
+    border-right: 0.15em solid white;
+  }
 
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+    to {
+      width: 100%;
+    }
+  }
+  
