solved some padding problems

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ nav ul {
     border-radius: 0.3em;
     border: .1em solid #2d6bef;
     text-align: center;
-    padding: 0.68em 1.05em 0.0.68em 1em;
+    padding: 0.58em 1.05em 0.58em 1em;
 }
 
 #contact-nav-btn:hover:visited {
@@ -226,13 +226,13 @@ nav ul {
     font-family: GraphikRegular;
     font-size: 1.26rem;
     margin: 0px;
-    letter-spacing: 0.03rem;
-    line-height: 1.38em;
+    letter-spacing: 0.034rem;
+    line-height: 1.4em;
 }
 
 .about-info {
     width: 48%;
-    padding-bottom: 10rem;
+    padding-bottom: 10.8rem;
 }
 
 .about-info span{
@@ -418,7 +418,7 @@ nav ul {
 }
 
  .modal {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
