--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ nav ul {
 }
 
  .modal {
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
