--- a/style.css
+++ b/style.css
@@ -34,11 +34,12 @@ src: url(Montserrat-Bold.otf);
 html {
     margin: 0px;
     padding: 0px;
+    width: 100%;
 }
 
 .nav-container {
     width: 100%;
-    max-width: 1360px;
+    max-width: 1400px;
 }
 
 body {
@@ -46,10 +47,6 @@ body {
     padding: 0px;
     color: white;
     font-family: GraphikMedium;
-}
-
-main {
-    width: 100%;
 }
 
 .nav-container{
@@ -90,7 +87,7 @@ nav ul {
 }
 
 .nav-btn{
-    padding: 0.68em 1.1em 0.68em 1.1em;
+    padding: 0.68em 1.1em;
     cursor: pointer;
     margin: 0em 0.2em;
     letter-spacing: 0.01em;
@@ -129,11 +126,12 @@ nav ul {
     display: flex;
     justify-content: space-between;
     padding: 5em 0em 12em 5em;
+    width: 100%;
 }
 
 .main-container img {
     margin: 0px;
-    width: 650px;
+    width: 40%;
 }
 
 .main-info h1, .main-info span{
@@ -279,6 +277,13 @@ nav ul {
     display: flex;
     justify-content: space-between;
     margin: 7em 5em 14em 4em;
+}
+
+@media (max-width:200px) {
+    .projects-container {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .project-article {
