max-width update

--- a/style.css
+++ b/style.css
@@ -518,6 +518,7 @@ main {
 
 .footer-container {
     width: 88%;
+    max-width: 1400px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
